--- a/input.css
+++ b/input.css
@@ -183,3 +183,24 @@ body {
 .cursor-pointer {
     cursor: pointer;
 }
+
+/* Eiqal css */
+.poppin-font{
+    font-family: 'Poppins', sans-serif;
+}
+
+.great-vibe-font{
+    font-family: 'Great Vibes', cursive;
+}
+
+.subtext-font-weight {
+    font-weight: 500;
+}
+
+.subtext-font-size{
+    font-size:18px;
+}
+
+.text-title-font-size{
+    font-size:20px;
+}
