--- a/card-digital.css
+++ b/card-digital.css
@@ -139,8 +139,8 @@ body {
   }
 
 .btn-custom, .btn-custom .active, .btn-custom:hover, .btn-custom:focus {
-    background-color: #b29946 !important;
-    border-color: #b29946 !important;
+    background-color: #d2b995 !important;
+    border-color: #d2b995 !important;
     padding-left: 45px !important;
     padding-right:45px !important;
     padding-top: 8px !important;
